# routes/api.php
@@ -22,42 +22,67 @@ $router->get('/', function () use ($router) {
 
 $router->group(['prefix' => 'api/'], function ($router) {
 
-    $router->POST('/user/login', 'ApiUsersController@login');
-    $router->GET('/user/logout', 'ApiUsersController@logout');
+    /**
+     * POST login
+     * Summary: User login
+     * Output-Formats: [application/json]
+     */
+    $router->POST('/user/login', 'Api\Auth\LoginController@login');
+    
+    /**
+     * POST logout
+     * Summary: User logout
+     * Output-Formats: [application/json]
+     */
+    $router->POST('/user/logout', 'Api\Auth\LoginController@logout');
+    
+    /**
+     * POST forgetPassword
+     * Summary: forget password
+     * Output-Formats: [application/json]
+     */
+    $router->POST('/user/password/forget', 'Api\Auth\ForgotPasswordController@getResetToken');
+    
+    /**
+     * POST restPassword
+     * Summary: rest password
+     * Output-Formats: [application/json]
+     */
+    $router->POST('/user/password/reset', 'Api\Auth\ResetPasswordController@reset');
+    
     /**
      * POST firstStepPost
      * Summary: User first step
-     * Notes: User first step
      * Output-Formats: [application/json]
      */
-    $router->POST('/user/first-step', 'RegistrationApi@firstStepPost');
+    $router->POST('/user/first-step', 'ApiUsersController@firstStepPost');
+    
     /**
      * POST registrationPost
      * Summary: User registration
-     * Notes: User registration
      * Output-Formats: [application/json]
      */
-    $router->POST('/user/registration', 'RegistrationApi@registrationPost');
+    $router->POST('/user/registration', 'ApiUsersController@registrationPost');
+    
     /**
      * GET countriesGet
      * Summary: Get countries list
-     * Notes: Get countries list
      * Output-Formats: [application/json]
      */
-    $router->GET('/get-countries', 'ApiLocationController@countriesGet');
+    $router->GET('/get-countries', 'Api\LocationsController@countriesGet');
+    
     /**
      * GET countriesIdGet
      * Summary: Get states list by country id
-     * Notes: Get states list by country id
      * Output-Formats: [application/json]
      */
-    $router->GET('/get-countries/{id}', 'ApiLocationController@countriesIdGet');
+    $router->GET('/get-countries/{id}', 'Api\LocationsController@countriesIdGet');
+    
     /**
      * GET statesIdGet
      * Summary: Get cities list by state id
-     * Notes: Get cities list by state id
      * Output-Formats: [application/json]
      */
-    $router->GET('/get-states/{id}', 'ApiLocationController@statesIdGet');
+    $router->GET('/get-states/{id}', 'Api\LocationsController@statesIdGet');
 });
 
